fix: change flashcard-inner to position absolute to resolve iOS Safari flex-height collapse

--- a/style.css
+++ b/style.css
@@ -612,7 +612,9 @@ body {
 }
 
 .flashcard-inner {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
